--- a/index.html
+++ b/index.html
@@ -260,11 +260,11 @@
                             <h4 class="mb-3">Residential & Commercial Systems Installations</h4>
                             <p>Tested and Trusted quality to cover your energy demands for longer hours. We offer best in-class energy solutions for 
 							<ul>
-	                                                        <i class="fa me-3">  Homes </i> 
-								<i class="fa me-3"> Offices </i> 
-								<i class="fa me-3"> Pharmacies </i>
-								<i class="fa me-3"> Hospitals </i> 
-								<i class="fa me-3"> Schools and lots more.... </i> 
+	                                                        <li class="fa me-3">  Homes </li> 
+								<li class="fa me-3"> Offices </li> 
+								<li class="fa me-3"> Pharmacies </li>
+								<li class="fa me-3"> Hospitals </li> 
+								<li class="fa me-3"> Schools and lots more.... </li> 
 							</ul>
                                                       </p>
 							<a class="small fw-medium" href="">Read More<i class="fa fa-arrow-right ms-2"></i></a>
@@ -278,14 +278,14 @@
                             <div class="service-icon">
                                 <i class="fa fa-solar-panel fa-3x"></i>
                             </div>
-                            <h4 class="mb-3">Solar Accessories & Appliances</h4>
+                            <h4 class="mb-3">Sales of Solar Appliances & Accessories </h4>
                             <p>We offer clean energy equipment and accessories such as 
                                <ul>  
-				    <i class="fa me-3">  Solar panels </i> 
-				    <i class="fa me-3">  Solar pumps </i>
-				    <i class="fa me-3"> Solar streetlights </i>
-				    <i class="fa me-3"> Solar water heaters </i>
-				    <i class="fa me-3"> Solar charge controllers and lots more.... </i>
+				    <li class="fa me-3">  Solar panels </li> 
+				    <li class="fa me-3">  Solar pumps </li>
+				    <li class="fa me-3"> Solar streetlights </li>
+				    <li class="fa me-3"> Solar water heaters </li>
+				    <li class="fa me-3"> Solar charge controllers and lots more.... </li>
                                </ul>
 				</p>
                             <a class="small fw-medium" href="">Read More<i class="fa fa-arrow-right ms-2"></i></a>
@@ -313,8 +313,7 @@
                                 <i class="fa fa-video fa-3x"></i>
                             </div>
                             <h4 class="mb-3">CCTV Installation</h4>
-                            <p> We provide a wide range of CCTV cameras, from basic analog cameras to the most advanced digital IP cameras.</p>
-							<p id="read-more-content">Our CCTV systems provide businesses with a comprehensive security solution that is reliable, cost effective and easy to use. We also provide comprehensive maintenance and technical support services to ensure your system is always running optimally</p>
+                            <p> We provide a wide range of CCTV cameras, from basic analog cameras to the most advanced digital IP cameras.Our CCTV systems provide businesses with a comprehensive security solution that is reliable, cost effective and easy to use. We also provide comprehensive maintenance and technical support services to ensure your system is always running optimally</p>
                         </div>
                     </div>
                 </div>
@@ -649,31 +648,31 @@
             <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
                 <div class="testimonial-item text-center">
                     <div class="testimonial-img position-relative">
-                        <img class="img-fluid rounded-circle mx-auto mb-5" src="img/testimonial-1.jpg">
+                        <img class="img-fluid rounded-circle mx-auto mb-5" src="img/estimonial-1.jpg">
                         <div class="btn-square bg-primary rounded-circle">
                             <i class="fa fa-quote-left text-white"></i>
                         </div>
                     </div>
                     <div class="testimonial-text text-center rounded p-4">
-                        <p>Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</p>
+                        <p>Great servuce by the team. Was entirely impressed to with the tidy installation and responses to all my inquiries</p>
                         <h5 class="mb-1">Client Name</h5>
-                        <span class="fst-italic">Profession</span>
+                        <span class="fst-italic">Sam</span>
                     </div>
                 </div>
                 <div class="testimonial-item text-center">
                     <div class="testimonial-img position-relative">
-                        <img class="img-fluid rounded-circle mx-auto mb-5" src="img/testimonial-2.jpg">
+                        <img class="img-fluid rounded-circle mx-auto mb-5" src="img/estimonial-2.jpg">
                         <div class="btn-square bg-primary rounded-circle">
                             <i class="fa fa-quote-left text-white"></i>
                         </div>
                     </div>
                     <div class="testimonial-text text-center rounded p-4">
-                        <p>Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</p>
+                        <p>Great quality and service. A was particularly surprised they completed the entire installation in one day. they are dedicated professionals </p>
                         <h5 class="mb-1">Client Name</h5>
                         <span class="fst-italic">Profession</span>
                     </div>
                 </div>
-                <div class="testimonial-item text-center">
+               <!-- <div class="testimonial-item text-center">
                     <div class="testimonial-img position-relative">
                         <img class="img-fluid rounded-circle mx-auto mb-5" src="img/testimonial-3.jpg">
                         <div class="btn-square bg-primary rounded-circle">
@@ -685,7 +684,7 @@
                         <h5 class="mb-1">Client Name</h5>
                         <span class="fst-italic">Profession</span>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
