--- a/index.html
+++ b/index.html
@@ -279,15 +279,15 @@
                                 <i class="fa fa-solar-panel fa-3x"></i>
                             </div>
                             <h4 class="mb-3">Sales of Solar Appliances & Accessories </h4>
-                            <p>We offer clean energy equipment and accessories such as 
+				<p>We offer clean energy equipment and accessories such as </p>
                                <ul>  
-				    <li class="fa me-3">  Solar panels </li> 
-				    <li class="fa me-3">  Solar pumps </li>
-				    <li class="fa me-3"> Solar streetlights </li>
-				    <li class="fa me-3"> Solar water heaters </li>
-				    <li class="fa me-3"> Solar charge controllers and lots more.... </li>
+				    <li class="fa me-3">Solar panels </li> 
+				    <li class="fa me-3">Solar pumps </li>
+				    <li class="fa me-3">Solar streetlights </li>
+				    <li class="fa me-3">Solar water heaters </li>
+				    <li class="fa me-3">Solar charge controllers and lots more.... </li>
                                </ul>
-				</p>
+				
                             <a class="small fw-medium" href="">Read More<i class="fa fa-arrow-right ms-2"></i></a>
                         </div>
                     </div>
@@ -654,7 +654,7 @@
                         </div>
                     </div>
                     <div class="testimonial-text text-center rounded p-4">
-                        <p>Great servuce by the team. Was entirely impressed to with the tidy installation and responses to all my inquiries</p>
+                        <p>Great service by the team. Was entirely impressed with the tidy installation and responses to all my inquiries</p>
                         <h5 class="mb-1">Client Name</h5>
                         <span class="fst-italic">Sam</span>
                     </div>
@@ -667,9 +667,9 @@
                         </div>
                     </div>
                     <div class="testimonial-text text-center rounded p-4">
-                        <p>Great quality and service. A was particularly surprised they completed the entire installation in one day. they are dedicated professionals </p>
+                        <p>Wonderful quality and service. I was particularly surprised they completed the entire installation in one day. They are dedicated professionals </p>
                         <h5 class="mb-1">Client Name</h5>
-                        <span class="fst-italic">Profession</span>
+                        <span class="fst-italic">Chibuzor</span>
                     </div>
                 </div>
                <!-- <div class="testimonial-item text-center">
