--- a/index.html
+++ b/index.html
@@ -287,7 +287,11 @@
 				    <li class="fa me-3">Solar water heaters </li>
 				    <li class="fa me-3">Solar charge controllers and lots more.... </li>
                                </ul>
-				
+				<ul> 
+					<li>Coffee</li>
+					<li>Tea</li>
+					<li>Milk</li>
+				</ul>  
                             <a class="small fw-medium" href="">Read More<i class="fa fa-arrow-right ms-2"></i></a>
                         </div>
                     </div>
