--- a/index.html
+++ b/index.html
@@ -288,9 +288,11 @@
 				    <li class="fa me-3">Solar charge controllers and lots more.... </li>
                                </ul>
 				<ul> 
-					<li>Coffee</li>
-					<li>Tea</li>
-					<li>Milk</li>
+					<li class="fa me-3">Solar panels</li>
+					<li>Solar pumps</li>
+					<li>Solar streetlights </li>
+					<li>Solar water heaters</li>
+					<li>Solar charge controllers and lots more....</li>
 				</ul>  
                             <a class="small fw-medium" href="">Read More<i class="fa fa-arrow-right ms-2"></i></a>
                         </div>
