--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Solartec - Renewable Energy Website Template</title>
+    <title>Nooq7 Eergy - Renewable Energy Company</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -186,7 +186,7 @@
             <div class="row g-0 mx-lg-0">
                 <div class="col-lg-6 ps-lg-0 wow fadeIn" data-wow-delay="0.1s" style="min-height: 400px;">
                     <div class="position-relative h-100">
-                        <img class="position-absolute img-fluid w-100 h-100" src="img/logo_ps.jpg" style="object-fit: cover;" alt="">
+                        <img class="position-absolute img-fluid w-100 h-100" src="img/aboutus_img.png" style="object-fit: cover;" alt="">
                     </div>
                 </div>
                 <div class="col-lg-6 about-text py-5 wow fadeIn" data-wow-delay="0.5s">
@@ -231,7 +231,7 @@
                         <h6 class="text-primary"></h6>
                         <h1 class="mb-4">Core Values</h1>
                         <p>Quality: Delivering the highest quality products and services.</p>
-			<p> Integrity: Doing the right thing and taking responsibility for your actions.</p>
+			<p> Industry Knowledge: With our working experience in doing business in the Nigerian power sector, we leverage on our built experience in the energy space to deliver results.</p>
 			<p>Innovation: Encouraging creative thinking to find new solutions.</p>
 			<p>Collaboration: Working together to achieve shared objectives.</p>
                     </div>
