--- a/index.html
+++ b/index.html
@@ -260,11 +260,11 @@
                             <h4 class="mb-3">Residential & Commercial Systems Installations</h4>
                             <p>Tested and Trusted quality to cover your energy demands for longer hours. We offer best in-class energy solutions for 
 							<ul>
-	                                                        <li class="fa me-3">  Homes </li> 
-								<li class="fa me-3"> Offices </li> 
-								<li class="fa me-3"> Pharmacies </li>
-								<li class="fa me-3"> Hospitals </li> 
-								<li class="fa me-3"> Schools and lots more.... </li> 
+	                                                        <li>  Homes </li> 
+								<li> Offices </li> 
+								<li> Pharmacies </li>
+								<li> Hospitals </li> 
+								<li> Schools and lots more.... </li> 
 							</ul>
                                                       </p>
 							<a class="small fw-medium" href="">Read More<i class="fa fa-arrow-right ms-2"></i></a>
@@ -280,15 +280,9 @@
                             </div>
                             <h4 class="mb-3">Sales of Solar Appliances & Accessories </h4>
 				<p>We offer clean energy equipment and accessories such as </p>
-                               <ul>  
-				    <li class="fa me-3">Solar panels </li> 
-				    <li class="fa me-3">Solar pumps </li>
-				    <li class="fa me-3">Solar streetlights </li>
-				    <li class="fa me-3">Solar water heaters </li>
-				    <li class="fa me-3">Solar charge controllers and lots more.... </li>
-                               </ul>
+                          
 				<ul> 
-					<li class="fa me-3">Solar panels</li>
+					<li>Solar panels</li>
 					<li>Solar pumps</li>
 					<li>Solar streetlights </li>
 					<li>Solar water heaters</li>
@@ -426,7 +420,7 @@
 
 
     <!-- Projects Start -->
-    <div class="container-xxl py-5">
+   <!-- <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
                 <h6 class="text-primary">Our Projects</h6>
@@ -529,7 +523,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
     <!-- Projects End -->
 
 
